--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,4 @@
         = content_tag :div, msg, id: "flash_#{name}"
       = yield
       = render 'shared/modal'
+      = render 'shared/footer'
