--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,17 +1,19 @@
 .row
   .col-md-10.col-md-offset-1
     .add-contact-button
-      = link_to "Add Contact", new_contact_path, title: 'Add Contact', data: {gmodal: true}, class: 'btn btn-success btn-lg'
+      = link_to "Create Contact", new_group_contact_path(current_user.group.id), title: 'Add Contact', data: {gmodal: true}, class: 'btn btn-success btn-lg'
+      %br
     #contact
-      %h2#contact-header
-        Top Contacts
+      %h2
+        #contact-header
+          Top Contacts
       = render partial: 'top_contacts'
       %h2#contact-header
         All Contacts
       %table#contact-table.table-striped.table-hover
         %thead
           %th{colspan: "2"} name
-          %th{colspan: "2"}= link_to " Company", "#", class: 'company-sort forward', data: {type: 'company', category: 'contacts'}
+          %th{colspan: "2"}= link_to " Company", sort_group_contacts_path(current_user.group.id), class: 'company-sort forward', data: {type: 'company', category: 'contacts', group_id: current_user.group.id}
           %th{colspan: "2"} email
           %th{colspan: "2"} phone-number
         %tbody#contacts-table-entries
