--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,9 @@
 <div id= "edit-body">
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
+    <% resource.build_group unless resource.group.present? %>
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => update_registration_path(current_user.group.id), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
@@ -21,12 +22,19 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password, class: "form-control" %></div>
 
+
+  <div><%= f.fields_for :group do |group| %>
+    <%= group.label :group_Name %>
+    <%= group.text_field :name, class: "form-control" %>
+  </div>
+  <% end %>
+
   <div><%= f.submit "Update", class: "btn btn-success edit-button" %></div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, class: "btn btn-success edit-button" %></p>
+<p>Unhappy? <%= button_to "Cancel my account", update_registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, class: "btn btn-success edit-button" %></p>
 
 <%= link_to "Back", :back %>
 </div>
