--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <h2>Sign up</h2>
+<% resource.build_group %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -11,6 +12,12 @@
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
+
+  <div><%= f.fields_for :group do |g| %>
+    <%= g.label :group %><br />
+    <%= g.text_field :name %>
+    <% end %>
+  </div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
