--- a/app/views/invoices/_invoice.html.haml
+++ b/app/views/invoices/_invoice.html.haml
@@ -1,21 +1,21 @@
 -if invoice.kind == "invoice"
   %tr.line-item-show-row#invoices-row{data: {id: invoice.id}}
     %td= invoice.due_date
-    %td= link_to invoice.title, invoice_path(invoice)
+    %td= link_to invoice.title, group_invoice_path(current_user.group.id, invoice)
     %td.note-td
       = invoice.note
     %td
       - invoice.contacts.each do |contact|
-        = link_to(contact.name, contact_path(contact))
+        = link_to(contact.name, group_contact_path(current_user.group.id, contact))
     %td= invoice.total
     %td= invoice.state
 -elsif invoice.kind == "estimate"
   %tr.line-item-show-row#invoices-row{data: {id: invoice.id}}
     %td= invoice.created_at.strftime("%m-%d-%Y")
-    %td= link_to invoice.title, estimate_path(invoice)
+    %td= link_to invoice.title, group_estimate_path(current_user.group,invoice)
     %td.note-td
       = invoice.note
     %td
       - invoice.contacts.each do |contact|
-        = link_to(contact.name, contact_path(contact))
+        = link_to(contact.name, group_contact_path(current_user.group.id, contact))
     %td= invoice.total
