--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,29 +1,24 @@
-%nav.navbar.navbar-inverse{role: 'navigation'}
-  .navbar-header
-    %button.navbar-toggle{"data-target" => ".navbar-ex1-collapse", "data-toggle" => "collapse", type: "button"}
-      %span.sr-only Toggle navigation
-      %span.icon-bar
-      %span.icon-bar
-      %span.icon-bar
-    = link_to('Sherman', root_path, html_options = {:class => 'navbar-brand'})
-  .collapse.navbar-collapse.navbar-ex1-collapse
+%nav.navbar.navbar-inverse#sherman-nav{role: 'navigation'}
+  .collapse.navbar-collapse.navbar-ex1-collapse#navbar-content
+    .navbar-header
+      = link_to('Sherman', root_path, html_options = {:class => 'navbar-brand'})
     %ul.nav.navbar-nav.navbar-right
-      %li
-        = link_to "Manage Contacts",contacts_path
       - if user_signed_in?
         %li
-          =link_to 'Invoices', invoices_path
+          = link_to "Manage Contacts", group_contacts_path(current_user.group.id)
         %li
-          =link_to 'Estimates', estimates_path
+          =link_to 'Invoices', group_invoices_path(current_user.group.id)
+        %li
+          =link_to 'Estimates', group_estimates_path(current_user.group.id)
         %li.dropdown
           %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
             ="#{current_user.email}"
             %b.caret
           %ul.dropdown-menu
             %li
-              = link_to 'Edit profile', edit_user_registration_path
+              = link_to 'Edit profile', edit_user_registration_path(current_user.group.id)
             %li
-              = link_to "Sign Out", destroy_user_session_path, method: :delete
+              = link_to "Sign Out", destroy_user_session_path(current_user.group.id), method: :delete
       -else
         %li
           = link_to "Sign up", new_user_registration_path
