--- a/app/views/estimates/new.html.haml
+++ b/app/views/estimates/new.html.haml
@@ -1,14 +1,14 @@
 .row
   .col-md-6.col-md-offset-3
-    %h2= "New #{@kind.capitalize}"
+    %h2= "New Estimate"
     .form-group
-      = form_for [@group, @invoice] do |f|
+      = form_for [current_user.group, @invoice] do |f|
         .form-group
           = f.label :title
           = f.text_field :title, class: "form-control"
           = f.label :note
           = f.text_area :note, :rows => 4,  class: "form-control"
-          = f.hidden_field :kind, value: @kind
+          = f.hidden_field :kind, value: 'estimate'
           %br
         .form-group
           = fields_for(@invoices_contacts) do |bd|
@@ -38,7 +38,4 @@
         #sum
         .form-group
           .post-buttons
-            -if @invoice.new_record?
-              = f.submit "Create #{@kind.capitalize}", :class => 'btn btn-success create-estimate-button', data: {id: @invoice.id, group_id: current_user.group.id}
-            -else
-              = f.submit "Edit #{@kind.capitalize}", :class => 'btn btn-success', data: {id: @invoice.id, group_id: current_user.group.id}
+            = f.submit "Create Estimate", :class => 'btn btn-success create-estimate-button', data: {id: @invoice.id, group_id: current_user.group.id}
