--- a/app/views/invoices/new.html.haml
+++ b/app/views/invoices/new.html.haml
@@ -1,8 +1,8 @@
 .row
   .col-md-6.col-md-offset-3
-    %h2= "New #{@kind.capitalize}"
+    %h2= "New Invoice"
     .form-group
-      = form_for [@group, @invoice] do |f|
+      = form_for [current_user.group, @invoice] do |f|
         .form-group
           = f.label :title
           = f.text_field :title, class: "form-control"
@@ -10,7 +10,7 @@
           = f.text_area :note, :rows => 4,  class: "form-control"
           = f.label :due_date, "Due Date", class: "due-date-label"
           = f.text_field :due_date, :size => "10x10", class: "due-date-field"
-          = f.hidden_field :kind, value: @kind
+          = f.hidden_field :kind, value: 'invoice'
           %br
         .form-group
           = fields_for(@invoices_contacts) do |bd|
