--- a/app/views/estimates/edit.html.haml
+++ b/app/views/estimates/edit.html.haml
@@ -2,7 +2,7 @@
   .col-md-6.col-md-offset-3
     %h2= "Edit Estimate"
     .form-group
-      = form_for [current_user.group, @invoice] do |f|
+      = form_for @invoice, url: group_invoice_path(current_user.group, @invoice) do |f|
         .form-group
           = f.label :title
           = f.text_field :title, class: "form-control"
@@ -15,7 +15,7 @@
             = bd.label :name, "Contact Name <em>(Cmd+Click)</em>".html_safe
             #new-contact-estimate-option
               = collection_select(:invoice, :id, @contacts, :id, :name, {:selected => @invoice.contacts.map{|i| i.id}}, {:prompt => 'cmd click', :multiple => true} )
-              = link_to "New Contact?", add_contact_estimate_path, class: "new-contact-estimate-form"
+              = link_to "New Contact?", new_group_contact_path(current_user.group), class: "new-contact-estimate-form"
           #contact-addition
         %h4.line-item-title Line Items
         = link_to 'Add Line Item', '#', class: 'btn btn-info btn-xs add-line-item'
